- Explicit `.zip` archive analysis now validates central-directory integrity in strict route and fails closed on partial metadata even when earlier entries parsed, preventing mixed valid/corrupt ZIP acceptance.
- Explicit `.zip` and `.tar` strict archive routes now require non-ambiguous entry paths, preventing duplicate entry-path ambiguity from passing strict archive routing.
- macOS installer coverage added to package adapter:
- `.pkg` now captures deterministic XAR header and script/permission hint counters.
- `.dmg` now captures deterministic trailer marker hints (`koly`) without mounting.
- Package strict route now requires minimum structural byte-size evidence for `.pkg` and `.dmg` beyond valid header/trailer markers, preventing tiny synthetic placeholders from passing explicit package routing.
- Document adapter deepened for `.docm/.xlsm`:
- ZIP structure + relationships are inspected deterministically for macro/embed/external-link indicators.
- Document strict route now fails closed on partial OOXML ZIP metadata even when structural markers are present, preventing mixed valid/corrupt office-document acceptance.
- Document strict route now requires both PDF header and EOF marker evidence for explicit `.pdf` analysis, preventing header-only placeholder inputs from passing strict document routing.
- Document strict route now requires PDF object-syntax evidence (`<obj> <gen> obj`) plus structural marker evidence (`xref`/catalog/trailer) for explicit `.pdf` analysis, preventing loose-token placeholder inputs from passing strict document routing.
- Document strict route now requires PDF `startxref` marker evidence for explicit `.pdf` analysis, preventing object+trailer placeholder inputs from passing strict document routing.
- Document strict route now requires OOXML primary part evidence for explicit office-document analysis (`word/document.xml` for `.docm`, `xl/workbook.xml` for `.xlsm`), preventing marker-only office ZIP shells from passing strict routing.