@@ -22,7 +22,7 @@ Adapter classes
   ARCHIVE_PLUGIN_REQUIRED
   ARCHIVE_PLUGIN_UNAVAILABLE
 - Route strictness:
-  explicit `--adapter archive` fails closed on invalid `.zip` signature bytes and invalid `.tar` structure/metadata (`ARCHIVE_FORMAT_MISMATCH`) rather than returning partial archive summaries. `.zip` strict mode validates central-directory integrity, rejects partial metadata even when some entries parsed, and requires non-ambiguous entry paths (duplicate entry paths fail strict routing). `.tar` strict mode validates header checksum and octal size fields, rejects partial metadata even when some entries parsed, and requires non-ambiguous entry paths (duplicate entry paths fail strict routing).
+  explicit `--adapter archive` fails closed on invalid `.zip` signature bytes and invalid `.tar` structure/metadata (`ARCHIVE_FORMAT_MISMATCH`) rather than returning partial archive summaries. `.zip` strict mode validates central-directory integrity, rejects partial metadata even when some entries parsed, and requires non-ambiguous entry paths (duplicate entry paths fail strict routing). `.tar` strict mode validates header checksum and octal size fields, rejects partial metadata even when some entries parsed, and requires non-ambiguous entry paths (duplicate entry paths fail strict routing). Strict plugin archive routes (`.tgz/.tar.gz/.txz/.tar.xz/.7z`) also enforce non-ambiguous entry-path sets from plugin listing output.
 
 2) package
 - Formats: .msi, .msix, .exe, .nupkg, .whl, .jar, .tar.gz/.tgz/.tar.xz/.txz, .deb, .rpm, .appimage, .pkg, .dmg
